welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:5: error: ')' expected but 'if' found.
  if((a==b==c){
  ^greenTicket:8: error: ')' expected but 'else' found.
  else if((a==b) || (b==c) || (a==c)){
  ^